changed title underline height for mobile

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             <div class="accordion__label">React</div>
                             <div class="accordion__label">Redux</div>
                             <div class="accordion__label">JavaScript</div>
-                            <div class="accordion__label">TypeScript</div>
+                            <!-- <div class="accordion__label">TypeScript</div> -->
                             <div class="accordion__label">HTML</div>
                             <div class="accordion__label">CSS</div>
                             <div class="accordion__label">SCSS</div>
