added collectors-wallet link

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="main-projects__container">
                 <div class="collectors-wallet">
                     <img src="img/collectors-wallet.png" alt="collectors-wallet" class="collectors-wallet__img">
-                    <a class="collectors-wallet__btn" onclick="alert('Извините, проект ещё в разработке');">
+                    <a class="collectors-wallet__btn" href="https://pogodipostoi.github.io/collectors-wallet">
                         Кошелек <br> коллектора
                         <img class="collectors-wallet__btn-arrow" src="img/arrow_forward--black.svg" alt="arrow">
                     </a>
